Prevents overflow visible on <select multiple>
I had a bug when upgrading from alpha.2 to alpha.3 with a <select multiple> tag : the options where displayed with forced overflow visible, which renders all options even out of the select tag.

--- a/scss/_normalize.scss
+++ b/scss/_normalize.scss
@@ -274,7 +274,7 @@ optgroup {
 
 button,
 input, // 1
-select { // 2
+select:not([multiple]) { // 2
   overflow: visible;
 }
 
